Fixed scrolling issues. Added Social Icons. Working on mobile

--- a/wp-content/themes/epik/assets/sass/pages/_single-product.scss
+++ b/wp-content/themes/epik/assets/sass/pages/_single-product.scss
@@ -39,14 +39,17 @@
 	.images {
 		background: #fff;
 		padding-top: 50px;
-		position: fixed;
+		//position: fixed;
 		text-align: center;
 		width: 50%;
+
+		&.js-fixed {
+			position: fixed;
+		}
 	}
 
 	.summary {
 		background: #ebebeb;
-		margin-left: 50%;
 		min-height: 100vh;
 		width: 50%;
 	}
@@ -116,6 +119,20 @@
 		width: 44.10%;
 	}
 
+	&.woocommerce .upsells ul.products li.product .price {
+		text-align: center;
+	}
+
+	.upsells ul.products li.product .button,
+	.upsells ul.products li.product .categories {
+		display: none;
+	}
+
+}
+
+body.woocommerce div.product div.images, 
+body.woocommerce div.product div.summary {
+	margin-bottom: 0;
 }
 
 body.single-product div.product div.images .attachment-shop_single.wp-post-image,
