--- a/wp-content/themes/epik/style.css
+++ b/wp-content/themes/epik/style.css
@@ -2843,6 +2843,24 @@ Miscellaneous
 .author-box p:last-child {
   margin-bottom: 0; }
 
+/*! ## Single Product Social Media Links
+---------------------------------------- */
+.social-share h2 {
+  color: #222;
+  font-family: "open_sans_condensedbold", sans-serif;
+  font-size: 2.5em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.2;
+  margin: 0 0 0.5em;
+  text-rendering: optimizeLegibility;
+  text-transform: uppercase; }
+.social-share .social-media-menu-list-item {
+  display: inline-block; }
+.social-share .fa {
+  padding: 1em 1.3em;
+  font-size: 2em; }
+
 /* ---------------------------------- *\
 	# Front Page | front-page.php
 \* ---------------------------------- */
@@ -3155,12 +3173,12 @@ body.woocommerce .single-product .woocommerce-message {
 .single-product .images {
   background: #fff;
   padding-top: 50px;
-  position: fixed;
   text-align: center;
   width: 50%; }
+  .single-product .images.js-fixed {
+    position: fixed; }
 .single-product .summary {
   background: #ebebeb;
-  margin-left: 50%;
   min-height: 100vh;
   width: 50%; }
 .single-product div.product .product_title {
@@ -3198,6 +3216,15 @@ body.woocommerce .single-product .woocommerce-message {
 .single-product.woocommerce ul.products li.product, .single-product.woocommerce-page ul.products li.product {
   margin: 0 5.9% 2.992em 0;
   width: 44.10%; }
+.single-product.woocommerce .upsells ul.products li.product .price {
+  text-align: center; }
+.single-product .upsells ul.products li.product .button,
+.single-product .upsells ul.products li.product .categories {
+  display: none; }
+
+body.woocommerce div.product div.images,
+body.woocommerce div.product div.summary {
+  margin-bottom: 0; }
 
 body.single-product div.product div.images .attachment-shop_single.wp-post-image,
 body.single-product div.product div.images .attachment-shop_thumbnail {
